--- a/css/style.css
+++ b/css/style.css
@@ -20,16 +20,24 @@ html {
   scroll-padding-top: 80px; /* ajuste à la hauteur de ta navbar */
 }
 
-.card-img-top {
+.card-img {
   object-fit: cover;
   height: 300px;
+  max-height: 300px;
+}
+
+.carousel {
+  max-width: 600px;
+  border-radius: 1rem;
+  overflow: hidden;
+  transition: border-radius 0.3s ease;
 }
 
 .carousel-item {
-  height: 475px; /* Ajuste selon ton besoin */
+  height: 475px;
 }
 
-.carousel-item .card {
+.card {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -40,7 +48,6 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  ;
 }
 
 .img-shadow {
