--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,12 @@ html {
   justify-content: space-between;
 }
 
+.modal .btn-close {
+  filter: invert(1);
+  background-color: rgba(255, 255, 255, 1); /* léger fond noir transparent */
+  border-radius: 50%;
+}
+
 .img-shadow {
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
   border-radius: 15px;
